force-app/main/default/objects/CC_Settings__c/CC_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting reutilizable para NIC</description>
    <label>CC_Settings</label>
</CustomObject>