force-app/main/default/objects/CC_Settings__c/fields/CC_Configuracion_13__c.field-meta.xml
<CustomField>
    <fullName>CC_Configuracion_13__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Configuracion_13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>